--- a/popup/popup.html
+++ b/popup/popup.html
@@ -259,19 +259,19 @@
       <p class="feedback-description">Found a bug? Have a feature request? Your feedback helps make CommsFinder better!</p>
       
       <div class="feedback-buttons">
-        <a href="https://github.com/yourusername/commsfinder/issues/new?template=bug_report.md" 
+        <a href="https://github.com/zohfur/commsfinder/issues/new?template=bug_report.md" 
            target="_blank" 
            class="feedback-btn bug-report-btn">
           <span class="feedback-btn-icon">🐛</span>
           Report Bug
         </a>
-        <a href="https://github.com/yourusername/commsfinder/issues/new?template=feature_request.md" 
+        <a href="https://github.com/zohfur/commsfinder/issues/new?template=feature_request.md" 
            target="_blank" 
            class="feedback-btn feature-request-btn">
           <span class="feedback-btn-icon">💡</span>
           Suggest Feature
         </a>
-        <a href="https://forms.gle/yourFormId" 
+        <a href="https://forms.gle/Kt61z8ZYiSTpKLNp8" 
            target="_blank" 
            class="feedback-btn general-feedback-btn">
           <span class="feedback-btn-icon">📝</span>
