Set AI mode as default
No-AI mode is untested and unfinished, so AI mode should be set as default to skip the user having to manually enable it

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,7 +8,6 @@
 </head>
 <body>
   <div class="container">
-    <!-- Header -->
     <header class="header">
       <div class="header-content">
         <img src="../icons/icon32.png" alt="Commsfinder" class="header-icon">
@@ -19,9 +18,7 @@
       </div>
     </header>
 
-    <!-- Main Content -->
     <main class="main">
-      <!-- Status Section -->
       <section class="status-section">
         <div class="scan-status" id="scanStatus">
           <div class="status-indicator" id="statusIndicator">
@@ -334,8 +331,7 @@
               <div class="benchmark-text">Initializing...</div>
             </div>
             <div id="benchmarkResults" style="display: none;">
-              <h4>Benchmark Results (500 samples)</h4>
-              <p>Higher scores are better. F1 score is the harmonic mean of precision and recall.</p>
+              <h4>Benchmark Results</h4>
               <div class="benchmark-table">
                 <table></table>
               </div>
@@ -370,5 +366,4 @@
   <script src="fuse.min.js"></script>
   <script src="popup.js"></script>
 </body>
-</html> 
 </html> 
