Update icons, remove demo, fix links

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,7 +10,7 @@
   <div class="container">
     <header class="header">
       <div class="header-content">
-        <img src="../icons/icon32.png" alt="Commsfinder" class="header-icon">
+        <img src="../icons/icon48.png" alt="Commsfinder" class="header-icon">
         <h1 class="header-title">Commsfinder</h1>
         <button class="settings-btn" id="settingsBtn" title="Settings">
           ⚙️
@@ -173,17 +173,17 @@
     <div id="commsClassifierPromo" class="classifier-promo" style="display: none;">
       <div class="promo-content">
         <div class="promo-header">
-          <img src="../icons/icon48.png" alt="CommsClassifier Logo" class="promo-logo">
+          <img src="../icons/icon128.png" alt="CommsClassifier Logo" class="promo-logo">
           <h3>Help Improve Detection</h3>
         </div>
         <p>Want to help make commission detection more accurate? Try my companion extension CommsClassifier to submit manual classifications used to improve the scan accuracy.</p>
         <div class="promo-buttons">
           <a href="https://chromewebstore.google.com/detail/cpfbbohbgdlhfhibcobnogoijflamnkl" target="_blank" class="promo-btn chrome-btn">
-            <img src="../icons/chrome.svg" alt="Chrome" class="store-icon">
+            <img src="../logos/chrome.svg" alt="Chrome" class="store-icon">
             Chrome Store
           </a>
           <a href="https://addons.mozilla.org/en-US/firefox/addon/commscrowdsourcer/" target="_blank" class="promo-btn firefox-btn">
-            <img src="../icons/firefox.svg" alt="Firefox" class="store-icon">
+            <img src="../logos/firefox.svg" alt="Firefox" class="store-icon">
             Firefox Add-ons
           </a>
         </div>
